<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/setScoreDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_score"
        android:textSize="24sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setMatchInfoDialogTeam1Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/setScoreDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/team_1"/>
    <EditText
        android:id="@+id/setScoreDialogTeam1Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/team_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setMatchInfoDialogTeam1Header"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/setScoreDialogTeam2Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/team_2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setScoreDialogTeam1Box"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/setScoreDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/setScoreDialogTeam2Box"
        app:layout_constraintEnd_toStartOf="@id/setScoreDialogSetBtn" />

    <Button
        android:id="@+id/setScoreDialogSetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/setScoreDialogTeam2Box"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>